manifests/task-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
        - name: task-app
          image: pratheush/spring-taskapp-jenkins-k8-cicd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9393
          readinessProbe:
            httpGet:
              path: /health
              port: 9393
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 9393
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "350Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: task-app-service
spec:
  selector:
    app: task-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9393
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 172.18.0.2.nip.io  # replace with your INGRESS-NGINX-CONTROLLER LoadBalancer CLUSTER-IP NOT EXTERNAL-IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-app-service
                port:
                  number: 80
